<resources>
    <string name="app_name">CheckAparment</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="correo">Ingrese E-Mail</string>
    <string name="clave">Ingrese Password</string>
    <string name="botonLogin">Ingresar</string>
    <string name="descpEdificio">Foto Edificio</string>
    <string name="fotoEdificio">Edificio</string>
    <string name="btnGuardar">Guardar</string>
    <string name="btnAlerta">Enviar Alerta</string>
    <string name="estado_luces">Estado Luces</string>
    <string name="elementos_dormitotio">Elementos Dormitotio</string>
    <string name="elementos_cocina">Elementos Cocina</string>
    <string name="elementos_ba_o">Elementos Baño</string>
    <string name="estado_terminaciones_normal">Estado terminaciones Normal</string>
    <string name="estado_terminaciones_regular">Estado terminaciones Regular</string>
    <string name="estado_terminaciones_malas">Estado terminaciones Malas</string>
    <string name="puntaje">Puntaje obtenido: %1$s puntos</string>
</resources>